dodany linki do prezentacji

--- a/index.html
+++ b/index.html
@@ -868,6 +868,13 @@ object(Timber\Post)[2842]
         <a href="https://twitter.com/krzeminskinet">
           <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
         </a>
+        <hr>
+        <h4>
+          Prezetancja dostępna pod:
+        </h4>
+        <a href="https://krzeminski.net/talks/timber-wprowadzenie">
+          https://krzeminski.net/talks/timber-wprowadzenie
+        </a>
       </section>
     </div>
     <script src="lib/js/head.min.js"></script>
