--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@ object(Timber\Post)[2842]
       <section>
         <h1>Ogłoszenie parafialne</h1>
         <p>
-          Jeśli chcesz tworzyć projekty z oparciu o Timbera i nie tylko to zajrzyj na <a href="https://www.xfive.co/jobs/">xfive.co/jobs/</a>. Przy zgłoszeniu wspomnij, że trafiłeś tam dzięki mnie. W przypadku pozytywnego przejście rekrutacji otrzymam mały bonusik ;).
+          Jeśli chcesz tworzyć projekty z oparciu o Timbera i nie tylko to zajrzyj na <a href="https://www.xfive.co/jobs/">xfive.co/jobs/</a>. Przy zgłoszeniu wspomnij, że trafiłeś tam dzięki mnie. W przypadku pozytywnego przejścia rekrutacji otrzymam mały bonusik ;).
         </p>
       </section>
       <section>
