--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             Wsparcie dla takich rozwiązań jak dziedziczenie, bloki (moduły) i wiele innych
           </li>
           <li class="fragment">
-            Szybki bo kompilowany do czystego kodu PHP - cokolwiek to znaczy :-)
+            Szybki bo kompilowany do czystego kodu PHP
           </li>
         </ul>
       </section>
@@ -325,30 +325,30 @@ new StarterSite();</code></pre>
   </head>
 {% endblock %}
 
-<body class="{{body_class}}" data-template="base.twig">
+<body class="{{ body_class }}" data-template="base.twig">
   <header class="header" >
     {% block header %}
       <div class="wrapper">
         <h1 class="hdr-logo" role="banner">
-          <a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
+          <a class="hdr-logo-link" href="{{ site.url }}" rel="home">{{ site.name }}</a>
         </h1>
         <nav id="nav-main" class="nav-main" role="navigation">
-          {% include "menu.twig" with {'menu': menu.get_items} %}
+          {% include "menu.twig" with { 'menu' : menu.get_items } %}
         </nav><!-- #nav -->
       </div>
     {% endblock %}
   </header>
 
   <section id="content" role="main" class="content-wrapper">
-    {% if title %}<h1>{{title}}</h1>{% endif %}
-      <div class="wrapper {{sidebar_class}}">
+    {% if title %}<h1>{{ title }}</h1>{% endif %}
+      <div class="wrapper {{ sidebar_class  }}">
         {% block content %}
           Sorry, no content
         {% endblock %}
       </div>
       {% if sidebar %}
         <aside class="layout-sidebar">
-          {{sidebar}}
+          {{ sidebar }}
         </aside>
       {% endif %}
   </section>
@@ -518,7 +518,7 @@ Timber::render( $templates, $context );</code></pre>
 {% if menu %}
   <ul>
     {% for item in menu %}
-      <li class="{{ item.classes | join(' ') }}">
+      <li class="{{ item.classes|join(' ') }}">
         <a href="{{ item.get_link }}">{{ item.title }}</a>
         {% include "menu.twig" with { 'menu': item.get_children } %}
       </li>
@@ -581,7 +581,7 @@ Timber::render( $templates, $context );</code></pre>
           </h3>
           <pre style="max-height: 400px; overflow-y: scroll;"><code class="twig" data-trim>
 {% for image in post.get_field('gallery') %}
-  <img src="{{ TimberImage(image) }}" />
+  <img src="{{ TimberImage(image).src }}" />
 {% endfor %}</code></pre>
         </section>
         <section>
@@ -589,13 +589,13 @@ Timber::render( $templates, $context );</code></pre>
             Repeater
           </h3>
           <pre style="max-height: 400px; overflow-y: scroll;"><code class="twig" data-trim>
-<h2>{{post.title}}</h2>
+<h2>{{ post.title }}</h2>
 <div class="my-list">
   {% for item in post.get_field('my_repeater') %}
     <div class="item">
       <h4>{{ item.name }}</h4>
       <h6>{{ item.info }}</h6>
-      <img src="{{TimberImage(item.picture).src}}" />
+      <img src="{{ TimberImage(item.picture).src }}" alt="" >
     </div>
   {% endfor %}
 </div></code></pre>
@@ -635,7 +635,7 @@ Timber::render( $templates, $context );</code></pre>
         </section>
         <section>
           <h3>
-            Zmienne globalne: site i theme
+            Zmienne dostępne globalnie
           </h3>
           <pre style="max-height: 400px; overflow-y: scroll;"><code class="twig" data-trim>
 // site
@@ -658,24 +658,18 @@ Timber::render( $templates, $context );</code></pre>
           </h3>
           <pre style="max-height: 400px; overflow-y: scroll;"><code class="twig" data-trim>
 // Podstawowe
-<img src="{{ post.thumbnail.src }}" alt="Image for {{ post.title }}" />
+<img src="{{ post.thumbnail.src }}" alt="Image for {{ post.title }}" >
 
 // Z użyciem zdefinowanych rozmiarów
-<img src="{{ post.thumbnail.src('medium') }}" alt="Image for {{ post.title }}" />
+<img src="{{ post.thumbnail.src('medium') }}" alt="Image for {{ post.title }}" >
 
 // Skalowanie
-<img src="{{ post.thumbnail.src|resize(300, 200) }}" />
-<img src="{{ post.thumbnail.src|resize(640) }}" />
+<img src="{{ post.thumbnail.src|resize(300, 200) }}" >
+<img src="{{ post.thumbnail.src|resize(640) }}" >
 
 // Konwertowanie
-<img src="{{ post.thumbnail.src|tojpg }}" />
-<img src="{{ post.thumbnail.src|tojpg|resize(300, 300) }}" /> // filtry od lewej do prawej
-
-// Retina dzięki filtrowi retina
-<img src="{{ post.thumbnail.src }}" srcset="{{ post.thumbnail.src | retina(1) }} 1x,
-{{ post.thumbnail.src | retina(2) }}  2x,
-{{ post.thumbnail.src | retina(3) }}  3x,
-{{ post.thumbnail.src | retina(4) }}  4x">
+<img src="{{ post.thumbnail.src|tojpg }}" >
+<img src="{{ post.thumbnail.src|tojpg|resize(300, 300) }}" > // filtry od lewej do prawej
           </code></pre>
         </section>
         <section>
@@ -713,7 +707,7 @@ Timber::render( $templates, $context );</code></pre>
 // Bez parametru
 {{ function('twenty_ten_entry_meta') }}
 
-// Z parametrem i wersji skróconej
+// Z parametrem, w wersji skróconej
 {{ fn('get_the_title', post.ID) }}
           </code></pre>
         </section>
@@ -827,6 +821,11 @@ object(Timber\Post)[2842]
             </a>
           </li>
           <li>
+            <a href="https://github.com/timber/timber/wiki">
+              Wiki Timbera
+            </a>
+          </li>
+          <li>
             <a href="http://twig.sensiolabs.org/">
               Dokumentacja Twiga
             </a>
@@ -844,7 +843,7 @@ object(Timber\Post)[2842]
         </ul>
       </section>
       <section>
-        <h1>Ogłoszenie parafialne</h1>
+        <h1>Chcesz pracować z Timberem?</h1>
         <p>
           Jeśli chcesz tworzyć projekty z oparciu o Timbera i nie tylko to zajrzyj na <a href="https://www.xfive.co/jobs/">xfive.co/jobs/</a>. Przy zgłoszeniu wspomnij, że trafiłeś tam dzięki mnie. W przypadku pozytywnego przejścia rekrutacji otrzymam mały bonusik ;).
         </p>
@@ -872,9 +871,18 @@ object(Timber\Post)[2842]
         <h4>
           Prezetancja dostępna pod:
         </h4>
-        <a href="https://krzeminski.net/talks/timber-wprowadzenie">
-          https://krzeminski.net/talks/timber-wprowadzenie
-        </a>
+        <ul>
+          <li>
+            <a href="https://krzeminski.net/talks/timber-wprowadzenie">
+              krzeminski.net/talks/timber-wprowadzenie
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/marcinkrzeminski/timber-wprowadzenie">
+              github.com/marcinkrzeminski/timber-wprowadzenie
+            </a>
+          </li>
+        </ul>
       </section>
     </div>
     <script src="lib/js/head.min.js"></script>
