--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Theme used for syntax highlighting of code -->
   <link rel="stylesheet" href="lib/css/zenburn.css">
 
-  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
+  <!--<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">-->
 
   <!-- Printing and PDF exports -->
   <script>
