--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ new StarterSite();</code></pre>
                 W liniach 1 - 10 na wypadek gdybyśmy nie aktywowali wtyczki
               </li>
               <li>
-                W lini 13 ustawiamy w jakich folderach naszego motywy Timber ma szukać szablów Twiga
+                W lini 13 ustawiamy w jakich folderach naszego motywu Timber ma szukać szablów Twiga
               </li>
               <li>
                 W liniach 17 - 25 mam konstruktor z konfiguracją motywu a także filtrami i akcjami
@@ -646,8 +646,8 @@ Timber::render( $templates, $context );</code></pre>
 ...
 
 // theme
-{{ theme.link }} // dla motywów nadrzędnego
-{{ theme.parent.link }} // dla motywy podrzędnego
+{{ theme.link }} // dla motywu nadrzędnego
+{{ theme.parent.link }} // dla motywu potomnego
 {{ theme.path }} // scieżka do pliku CSS aktywnego motywu
 ...
           </code></pre>
@@ -660,7 +660,7 @@ Timber::render( $templates, $context );</code></pre>
 // Podstawowe
 <img src="{{ post.thumbnail.src }}" alt="Image for {{ post.title }}" >
 
-// Z użyciem zdefinowanych rozmiarów
+// Z użyciem zdefiniowanych rozmiarów
 <img src="{{ post.thumbnail.src('medium') }}" alt="Image for {{ post.title }}" >
 
 // Skalowanie
@@ -798,10 +798,10 @@ object(Timber\Post)[2842]
             Timber to nie to samo co Tinder ;)
           </li>
           <li class="fragment">
-            Upraszcza tworzenie motywów poprzez separacje logiki od warstwy prezentacji
+            Upraszcza tworzenie motywów poprzez separację logiki od warstwy prezentacji
           </li>
           <li class="fragment">
-            Dziedziczenie i modulrazycji na poziomie plików (szablonów) dzięki integracji z Twigiem
+            Dziedziczenie i modularyzacja na poziomie plików (szablonów) dzięki integracji z Twigiem
           </li>
         </ul>
       </section>
